--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 	<div class="alert alert-<%= key %>"><%= value %></div>
 <% end %>
 
-<%= yield %>
+<div id="content">
+	<%= yield %>
+</div>
 
 </body>
 </html>
