--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,3 +1,22 @@
+#content {
+	width: 70%;
+	margin: 0 auto;
+	h1 {
+		text-align: center;
+		border-bottom: 2px solid gray;
+	}
+}
+
+#links {
+	background-color: #bfbfbf;
+	text-align: center;
+	line-height: 4.2em;
+	a {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
+
 .alert {
 	display: block;
 	width: 200px;
@@ -7,7 +26,7 @@
 		background-color: #ffe6e6;
 		border: 1px solid red;
 	}
-	&.alert-succes {
+	&.alert-success {
 		color: green;
 		background-color: #b3ffb3;
 		border: 1px solid green;
