Finish, first release

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -21,6 +21,7 @@
 	display: block;
 	width: 200px;
 	padding: 15px;
+	margin: 0 auto;
 	&.alert-danger {
 		color: red;
 		background-color: #ffe6e6;
@@ -34,6 +35,17 @@
 
 }
 
-input {
+input,textarea {
 	display: block;
+}
+
+/* Posts */
+ul {
+	list-style: none;
+	li {
+		background-color: #ccffcc;
+		padding: 10px;
+		border: 2px solid gray;
+		margin-bottom: 7px;
+	}
 }
